<resources>
    <string-array name="YearSpinner">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string-array name="Faculty">
        <item>Medicine</item>
        <item>Pediatrics</item>
        <item>Pharmacy</item>
        <item>Stomatology</item>
        <item>MTD</item>
    </string-array>

    <string name="faculty">Faculty</string>
    <string name="group">Group</string>
    <string name="course">Course</string>
    <string name="app_name">Schedule</string>
    <string name="lessonName">Subject</string>
    <string name="lessonNumber">Lesson number</string>
    <string name="lessonAddress">Address</string>
    <string name="weekDay">Week day</string>
    <string name="lessonOrder">Order</string>
    <string name="change_button">Change Layout</string>
    <string name="switch_odd">Is odd</string>
    <string name="clearButton">Clear</string>
    <string name="switch_lecture">Lecture</string>
    <string name="add_button">Add</string>

</resources>
