<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/autoCompleteTextView"
            android:layout_weight="1"
            android:hint="@string/lessonNumber" />

        <AutoCompleteTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/autoCompleteTextView2"
            android:hint="@string/lessonOrder"
            android:layout_weight="1" />

        <Switch
            android:text="Нечетная"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/switch1"
            android:layout_weight="1" />

        <Switch
            android:text="@string/switch_lecture"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/switch2"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>